@@ -312,8 +312,9 @@ template <typename THost_, typename TIterator>
 inline void
 setEnd(Segment<THost_, PrefixSegment> & me, TIterator new_end)
 {
-SEQAN_CHECKPOINT
-    me.data_end_position = new_end - begin(host(me));//, Standard());
+    SEQAN_CHECKPOINT;
+    // me.data_end_position = new_end - begin(host(me));//, Standard());
+    me.data_end_position = new_end - TIterator(begin(host(me)));
 }
 
 template <typename THost_>
